# Aegis-Project

./: .env.app  .env.example  .gitignore  AUDIT.md  CLAUDE.md  Dockerfile  Makefile  OPERATIONS.md  README.md  architecture.md  design-review.md  docker-compose.app.yml  docker-compose.yml  pyproject.toml  requirements.md  roadmap.md
db/: alembic.ini
db/migrations/: env.py
deploy/k8s/: README.md  configmap.yaml  deployments-web.yaml  deployments-workers.yaml  hpa.yaml  killswitch.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml
deploy/local/: create-topics.sh  otel-collector.yaml  topology.example.json
docs/adr/: 0001-domain-agentic-aiops.md  0002-kafka-event-backbone.md  0003-langgraph-supervised-graph.md  0004-cp-action-path.md  0005-at-least-once-idempotency.md  0006-externalized-checkpointed-state.md  0007-governed-catalog-hitl.md  0008-qdrant-vector-db.md  0009-incident-ownership-fencing.md  0010-oss-first-models.md  0011-cloud-agnostic-k8s.md  0012-outbox-defer-event-sourcing.md  0013-right-sized-services.md  0014-pdp-pep-audit.md  0015-assume-injection-succeeds.md  0016-precedent-gated-autonomy.md  0017-agent-budgets.md  0018-correlation-streaming-join.md  0019-aegis-reliability-isolation.md  0020-retention-tiering.md  0021-offline-infra-adapters.md  README.md
scripts/: init_db.py  seed_runbooks.py  send_demo_signals.py
src/aegis_common/: __init__.py  audit.py  chunking.py  config.py  db.py  embeddings.py  events.py  kafka.py  llm.py  logging.py  (+11 more)
tests/: conftest.py  test_agents_pipeline.py  test_audit_chain.py  test_chunking.py  test_correlation.py  test_policy.py  test_reliability.py  test_retrieval.py  test_schemas.py  test_security.py
(+29 files in other folders)
