[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — Autonomous Incident Response & Remediation Platform (agentic AIOps)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "aiokafka>=0.11",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "httpx>=0.27",
  "orjson>=3.10",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-logging>=0.48b0",
  "tenacity>=8.5",
]

[project.optional-dependencies]
# Phase 2/3 — kept separate so the deterministic spine installs light (ADR-013).
ai = [
  "qdrant-client>=1.11",
  "langgraph>=0.2.28",
  "langchain-core>=0.3",
  "langchain-community>=0.3",
  "fastembed>=0.3",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
aegis-ingestion = "aegis_services.ingestion_gateway.app:main"
aegis-detection = "aegis_services.detection.worker:main"
aegis-notification = "aegis_services.notification.worker:main"
aegis-console = "aegis_services.console_api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
plugins = []
